[gd_scene load_steps=10 format=3 uid="uid://cx5i35k8e5jlr"]

[ext_resource type="Script" path="res://grid_tile.gd" id="1_t6fvx"]
[ext_resource type="Texture2D" uid="uid://h1g76wkw2hd6" path="res://GFX/UI/grid.png" id="1_ydymj"]
[ext_resource type="Texture2D" uid="uid://cnalky6u87apy" path="res://GFX/UI/GridCyan.png" id="3_sf772"]
[ext_resource type="Texture2D" uid="uid://b0uei8o1e25s2" path="res://GFX/UI/GridRed.png" id="4_bmvuc"]
[ext_resource type="Texture2D" uid="uid://bon6fh2liltdy" path="res://GFX/UI/GridGreen.png" id="5_ixk2k"]
[ext_resource type="Texture2D" uid="uid://c3jpxgvp3lw0b" path="res://GFX/UI/GridLight.png" id="6_b6asj"]
[ext_resource type="Texture2D" uid="uid://cqxqfg7phcpts" path="res://GFX/UI/Grid_highlight.png" id="7_f6do2"]

[sub_resource type="SpriteFrames" id="SpriteFrames_c6cqs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_ydymj")
}, {
"duration": 1.0,
"texture": ExtResource("3_sf772")
}, {
"duration": 1.0,
"texture": ExtResource("4_bmvuc")
}, {
"duration": 1.0,
"texture": ExtResource("5_ixk2k")
}, {
"duration": 1.0,
"texture": ExtResource("6_b6asj")
}],
"loop": true,
"name": &"default",
"speed": 0.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t7kkk"]
size = Vector2(63, 63)

[node name="grid_tile" type="Area2D" groups=["tiles"]]
script = ExtResource("1_t6fvx")

[node name="grid_outline" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_c6cqs")

[node name="grid_highlight" type="Sprite2D" parent="grid_outline"]
visible = false
z_index = 1
texture = ExtResource("7_f6do2")

[node name="grid_body" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_t7kkk")

[node name="coords" type="Label" parent="."]
offset_left = -25.0
offset_top = 10.0
offset_right = 25.0
offset_bottom = 33.0
metadata/_edit_use_anchors_ = true

[node name="grid_text" type="Label" parent="."]
offset_left = 19.0
offset_top = -34.0
offset_right = 69.0
offset_bottom = -8.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
metadata/_edit_use_anchors_ = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
